--- a/BlogFrontEnd/WebContent/index.html
+++ b/BlogFrontEnd/WebContent/index.html
@@ -4,14 +4,9 @@
 <meta charset="ISO-8859-1">
 <title>BLOG</title>
 <link rel="stylesheet" href="assessts/css/bootstrap.min.css">
-<script src="assessts/js/jquery.js"></script>
-<script src="assessts/js/bootstrap.min.js"></script>
-
-<script src="assessts/angular/angular.min.js"></script>
-<script src="assessts/angular/angular-route.js"></script>
-<script src="assessts/angular/indexScript.js"></script>
-
 </head>
+
+
 <body ng-app="myApp">
 
 <!-- HEADER -->
@@ -39,6 +34,8 @@
    <li><a href="#!/contactUs">Contact Us</a></li>
    <li><a href="#!/login">Sign-In</a></li>
    <li><a href="#!/register">Register</a></li>
+    <li><a href="#!/addBlog">AddBlog</a></li>
+     <li><a href="#!/addJob">AddJob</a></li>
    </ul>
   <!--  <div class="input-group">
                             <input type="text" class="form-control" name="x" placeholder="Search term..." required="required">
@@ -133,6 +130,14 @@
 </div><!-- main-page -->
  
 </header>
+<script src="assessts/js/jquery.js"></script>
+<script src="assessts/js/bootstrap.min.js"></script>
 
+<script src="assessts/angular/angular.min.js"></script>
+<script src="assessts/angular/angular-route.js"></script>
+<script src="assessts/angular/indexScript.js"></script>
+<script src="assessts/angular/userScript.js"></script>
+<script src="assessts/angular/addBlog.js"></script>
+<script src="assessts/angular/addJob.js"></script>
 </body>
 </html>
