--- a/BlogFrontEnd/WebContent/addBlog.html
+++ b/BlogFrontEnd/WebContent/addBlog.html
@@ -5,7 +5,8 @@
 <title>BLOG</title>
 </head>
 <body>
-<form class="form-horizontal">
+<div ng-controller="BlogController">
+<form class="form-horizontal" method="post">
 <fieldset>
 
 <!-- Form Name -->
@@ -15,7 +16,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="textinput">BLOG TITLE</label>  
   <div class="col-md-5">
-  <input id="textinput" name="textinput" type="text" placeholder="Enter Blog Title" class="form-control input-md" required="required">
+  <input id="textinput" name="textinput" type="text" placeholder="Enter Blog Title" class="form-control input-md" required="required" ng-model="blog.title">
     
   </div>
 </div>
@@ -24,7 +25,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="blogDescription">BLOG Description</label>
   <div class="col-md-4">                     
-    <textarea class="form-control" id="blogDescription" name="blogDescription">Write your thoughts......</textarea>
+    <textarea class="form-control" id="blogDescription" name="blogDescription" ng-model="blog.content">Write your thoughts......</textarea>
   </div>
 </div>
 
@@ -32,12 +33,12 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for=""></label>
   <div class="col-md-4">
-    <button id="" name="" class="btn btn-success">POST</button>
+    <button id="" name="" class="btn btn-success" ng-click="addBlog()">POST</button>
   </div>
 </div>
 
 </fieldset>
 </form>
-
+</div>
 </body>
 </html>
