--- a/BlogFrontEnd/WebContent/login.html
+++ b/BlogFrontEnd/WebContent/login.html
@@ -1,5 +1,5 @@
 <div ng-controller="LoginController">
-<form class="form-horizontal">
+<form class="form-horizontal" method="post">
 <fieldset>
 
 <!-- Form Name -->
@@ -42,4 +42,5 @@
 
 </fieldset>
 </form>
+{{message}}
 </div>
