--- a/BlogFrontEnd/WebContent/index.html
+++ b/BlogFrontEnd/WebContent/index.html
@@ -35,7 +35,16 @@
    <li><a href="#!/contactUs">Contact Us</a></li>
    <li><a href="#!/login">Sign-In</a></li>
    <li><a href="#!/register">Register</a></li>
-    <li><a href="#!/addBlog">AddBlog</a></li>
+   <!-- BLOG -->
+    <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Blog</a>\
+    <div class="dropdown-menu">
+    <a class="dropdown-item" href="#!/addBlog">Post Blog</a><br>
+    <a class="dropdown-item" href="#!/approvedBlogs">My Approved Blogs</a><br>
+    <a class="dropdown-item" href="#">Blogs</a>
+    </div>
+    </li>
+    
      <li><a href="#!/addJob">AddJob</a></li>
    </ul>
   <!--  <div class="input-group">
