--- a/BlogFrontEnd/WebContent/index.html
+++ b/BlogFrontEnd/WebContent/index.html
@@ -156,6 +156,7 @@
 <script src="assessts/angular/userScript.js"></script>
 <script type="text/javascript" src="assessts/services/blogService.js"></script>
 <script type="text/javascript" src="assessts/angular/addComment.js"></script>
+<script type="text/javascript" src="assessts/angular/blogLikes.js"></script>
 <script src="assessts/angular/addBlog.js"></script>
 <script src="assessts/angular/addJob.js"></script>
 <script src="assessts/angular/validateUser.js"></script>
