--- a/BlogFrontEnd/WebContent/index.html
+++ b/BlogFrontEnd/WebContent/index.html
@@ -171,5 +171,8 @@
 <script src="assessts/angular/friendList.js"></script>
 <script src="assessts/angular/friendRequest.js"></script>
 <script src="assessts/angular/chat.js"></script>
+<script src="assessts/js/lodash.js"></script>
+<script src="assessts/js/sockjs.js"></script>
+<script src="assessts/js/stomp.js"></script>
 </body>
 </html>
