--- a/BlogFrontEnd/WebContent/index.html
+++ b/BlogFrontEnd/WebContent/index.html
@@ -170,7 +170,8 @@
 <script src="assessts/angular/friend.js"></script>
 <script src="assessts/angular/friendList.js"></script>
 <script src="assessts/angular/friendRequest.js"></script>
-<script src="assessts/angular/chat.js"></script>
+<script src="assessts/angular/chatCtrl.js"></script>
+<script type="text/javascript" src="assessts/services/chatService.js"></script>
 <script src="assessts/js/lodash.js"></script>
 <script src="assessts/js/sockjs.js"></script>
 <script src="assessts/js/stomp.js"></script>
