--- a/BlogFrontEnd/WebContent/friendRequests.html
+++ b/BlogFrontEnd/WebContent/friendRequests.html
@@ -4,8 +4,8 @@
 		<div class="row" style="width: 200px">
 			<div ng-repeat="friend in friends"></div>
 			Email:<b>{{friend.email}}</b>
-			<button ng-click="">Accept</button>
-			<button ng-click="">Reject</button>
+			<button ng-click="acceptFriend(friend)">Accept</button>
+			<button ng-click="rejectFriend(friend)">Reject</button>
 		</div>
 	</div>
 </div>
