--- a/BlogFrontEnd/WebContent/acceptBlog.html
+++ b/BlogFrontEnd/WebContent/acceptBlog.html
@@ -1,5 +1,6 @@
 <div ng-controller="BlogCtrl" ng-init="BlogList()">
 <h3>Accept Blogs</h3>
+{{message}}
 <table ng-repeat="blog in blogs">
 <tr>
 <td>Blog:- {{blog.title}}</td>
